<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playing_track"
    style="@style/MatchParent"
    android:orientation="vertical"
    tools:context="com.example.android.projectfour.PlayingTrackActivity">

    <ImageView
        android:id="@+id/playing_track_single_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/album_cyx_bxfs" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            style="@style/MatchParent"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_play_background" />

        <TextView
            style="@style/MatchParent"
            android:background="#36000000" />

        <TextView
            android:id="@+id/playing_track_single_name"
            style="@style/WrapContent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:paddingTop="6dp"
            android:text="@string/single_list_music1_cyx_bysh"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playing_track_single_info"
            style="@style/WrapContent"
            android:layout_below="@id/playing_track_single_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/single_list_album1_cyx_bxfs"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/seek_bar_group"
            style="@style/WrapContent"
            android:layout_below="@id/playing_track_single_info">

            <SeekBar
                android:id="@+id/seek_bar"
                style="@style/HeightWrapContent" />

            <TextView
                android:id="@+id/timing"
                style="@style/WrapContent"
                android:layout_below="@id/seek_bar"
                android:text="@string/the_timer_begin"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/total_time"
                style="@style/WrapContent"
                android:layout_alignParentRight="true"
                android:layout_below="@id/seek_bar"
                android:text="@string/the_timer_end"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>


        <LinearLayout
            style="@style/HeightWrapContent"
            android:layout_below="@id/seek_bar_group"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playing_track_icon_backward"
                style="@style/PlayerControl"
                android:baselineAlignBottom="true"
                android:src="@drawable/icon_backward" />

            <ImageView
                android:id="@+id/playing_track_icon_play"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1.5"
                android:baselineAlignBottom="true"
                android:src="@drawable/icon_play"
                android:tag="@string/res_id_icon_play" />

            <ImageView
                android:id="@+id/playing_track_icon_forward"
                style="@style/PlayerControl"
                android:baselineAlignBottom="true"
                android:src="@drawable/icon_forward" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>